# goorm-hermes

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  vite.config.ts
.hermes/context/: AGENTS.md
alembic/: env.py
docs/: README.md  architecture.md  deployment.md  environment-variables.md  local-development.md  spec.md
src/: App.tsx  index.css
src/api/: __init__.py  config.py  database.py  main.py
src/api/models/: __init__.py
src/api/routers/: documents.py  hermes.py  knowledge.py  memory.py  projects.py  reflection.py  repositories.py  search.py  skills.py
src/api/schemas/: __init__.py
src/api/services/: content_generator.py  document_service.py  gateway_service.py  github_service.py  hermes_service.py  knowledge_service.py  memory_service.py  repository_service.py  search_service.py  spec_watcher.py
src/modules/dashboard/: DashboardPage.tsx  Footer.tsx  Layout.tsx  Sidebar.tsx
src/modules/gateway/server/: index.ts
src/modules/guide/: UserGuidePage.tsx
src/modules/hermes/agents/: index.ts
src/modules/hermes/mcp-server/: index.ts
src/modules/knowledge/: KnowledgePage.tsx
src/modules/llm/: index.ts
src/modules/llm/config/: index.ts
src/modules/llm/gateway/: factory.ts  registry.ts
src/modules/memory/: MemoryPage.tsx
src/modules/project/: ProjectCatalogPage.tsx  ProjectDetailPage.tsx
src/modules/search/: SearchPage.tsx
src/modules/skills/: SkillsPage.tsx
src/shared/: api.ts
src/shared/types/: index.ts
(+8 files in other folders)
